# OOTPISP-2024

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: check_duplication.yml  codeql.yml
tasks/task_01/: readme.md
tasks/task_02/: readme.md
tasks/task_03/: readme.md
trunk/PO-11-220220/task_01/: readme.md
trunk/PO-11-220220/task_01/src/: CMakeLists.txt  Exam.cpp  Exam.h  main.cpp
trunk/po0_220215/task_01/: readme.md
trunk/po0_220215/task_02/: readme.md
trunk/po0_220215/task_03/: readme.md
trunk/po0_220215/task_04/: readme.md
trunk/po0_220215/task_05/: readme.md
trunk/po0_220216/task_01/: readme.md
trunk/po0_220216/task_01/src/: CMakeLists.txt  Empl.cpp  Empl.h  main.cpp
trunk/po0_220216/task_02/: readme.md
trunk/po0_220216/task_02/src/: CMakeLists.txt  Empl.cpp  Empl.h  Engineer.cpp  Engineer.h  Lab-2.cpp  Person.cpp  Person.h  Worker.cpp  Worker.h
trunk/po0_220216/task_03/: readme.md
trunk/po0_220216/task_03/src/: Bike.cpp  Bike.h  CMakeLists.txt  Car.cpp  Car.h  Transport.cpp  Transport.h  TransportCollection.cpp  TransportCollection.h  Truck.cpp  Truck.h  main.cpp
trunk/po0_220216/task_04/: readme.md
trunk/po0_220216/task_05/: readme.md
trunk/po0_220217/task_01/: readme.md
trunk/po0_220217/task_02/: readme.md
trunk/po0_220217/task_03/: readme.md
trunk/po0_220217/task_03/src/: CMakeLists.txt  MyContainer.cpp  MyContainer.h  Person.cpp  Person.h  Preschooler.cpp  Preschooler.h  Schoolboy.cpp  Schoolboy.h  StudentBrSTU.cpp  StudentBrSTU.h  Worker.cpp  Worker.h  main.cpp
trunk/po0_220217/task_04/: readme.md
trunk/po0_220217/task_05/: readme.md
trunk/po0_220217/task_05/src/: CMakeLists.txt  Time.cpp  Time.h  Vector.h  VectorOnPriorityQueue.h  main.cpp
trunk/po0_220218/task_01/: readme.md
trunk/po0_220218/task_02/: readme.md
trunk/po0_220218/task_02/src/: CMakeLists.txt  Detail.cpp  Detail.h  Good.cpp  Good.h  Mechanism.cpp  Mechanism.h  Node.cpp  Node.h  main.cpp
trunk/po0_220218/task_03/: readme.md
trunk/po0_220218/task_03/src/: CMakeLists.txt  Container.cpp  Container.h  IError.h  IOError.h  NotEnoughMemory.cpp  NotEnoughMemory.h  ReadFileError.cpp  ReadFileError.h  Store.cpp  WriteFileError.cpp  WriteFileError.h  main.cpp
trunk/po0_220218/task_04/: readme.md
trunk/po0_220218/task_04/src/: CMakeLists.txt  IError.cpp  IOError.cpp  Store.h  Time.cpp  Time.h  Vector.h  main.cpp
trunk/po0_220218/task_05/: readme.md
trunk/po0_220218/task_05/src/: CMakeLists.txt  CTime.cpp  CTime.h  QVector.h  Vector.h  main.cpp
trunk/po0_220219/task_01/: readme.md.txt
trunk/po0_220219/task_02/: readme.md.txt
trunk/po0_220219/task_03/: readme.md.txt
trunk/po0_220219/task_04/: readme.md.txt
trunk/po0_220219/task_04/src/: CMakeLists.txt  Time.cpp  Time.h  Vector.h  main.cpp
trunk/po0_220219/task_05/: readme.md
trunk/po0_220220/task_01/: readme.md
trunk/po0_220220/task_02/: readme.md
trunk/po0_220220/task_02/src/: Book.cpp  Book.h  CMakeLists.txt  Journal.cpp  Journal.h  PrintPublication.cpp  PrintPublication.h  Textbook.cpp  Textbook.h  main.cpp
trunk/po0_220220/task_03/: readme.md
trunk/po0_220220/task_03/src/: CMakeLists.txt  CantCastValue.cpp  CantCastValue.h  CastError.cpp  CastError.h  Container.cpp  Container.h  ImpossibleToInterface.cpp  ImpossibleToInterface.h  NotEnoughPrivileges.cpp  NotEnoughPrivileges.h  ProgrammError.cpp  ProgrammError.h  main.cpp
trunk/po0_220220/task_04/: readme.md
trunk/po0_220220/task_04/src/: CMakeLists.txt  Money.cpp  Money.h  Set.h  main.cpp
trunk/po0_220220/task_05/: readme.md
trunk/po0_220220/task_05/src/: CMakeLists.txt  Cash.cpp  Cash.h  Multitude.h  SSet.h  main.cpp
trunk/po0_220222/task_01/: readme.md
trunk/po0_220222/task_02/: readme.md
trunk/po0_220222/task_02/src/: CMakeLists.txt  challenge.cpp  challenge.h  exam.cpp  exam.h  final_exam.cpp  final_exam.h  main.cpp  test.cpp  test.h
trunk/po0_220222/task_03/: readme.md
trunk/po0_220222/task_03/src/: CMakeLists.txt  Circle.cpp  Circle.h  Container.cpp  Container.h  Geometry.cpp  Geometry.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  main.cpp
trunk/po0_220222/task_05/: readme.md
trunk/po0_220223/task_01/: readme.md
trunk/po0_220223/task_01/src/: CMakeLists.txt  Tovarka.h  main.cpp  tovar.cpp
trunk/po0_220223/task_02/: readme.md
trunk/po0_220223/task_02/src/: CMakeLists.txt  Place.cpp  Place.h  main.cpp
trunk/po0_220223/task_03/: readme.md
trunk/po0_220223/task_03/src/: CMakeLists.txt  Ellipse.cpp  Ellipse.h  Figures.cpp  Figures.h  FiguresCollection.cpp  FiguresCollection.h  Square.cpp  Square.h  Trapeze.cpp  Trapeze.h  main.cpp
trunk/po0_220223/task_04/: readme.md
trunk/po0_220223/task_05/: readme.md
trunk/po0_220223/task_05/src/: CMakeLists.txt  Money.cpp  Money.h  VectorOnPriority.h  Vvector.h  main.cpp
trunk/po0_220224/task_02/: readme.md
trunk/po0_220224/task_02/src/: CMakeLists.txt  Document.cpp  Document.h  check.cpp  check.h  invoice.cpp  invoice.h  main.cpp  receipt.cpp  receipt.h
trunk/po0_220224/task_03/: readme.md
trunk/po0_220224/task_03/src/: CMakeLists.txt  Container.cpp  Container.h  animal.cpp  animal.h  bird.cpp  bird.h  fish.cpp  fish.h  main.cpp  mammal.cpp  mammal.h  reptile.cpp  reptile.h
trunk/po0_220224/task_04/: readme.md
trunk/po0_220224/task_05/: readme.md
trunk/po0_220225/task_01/: readme.md
trunk/po0_220225/task_01/src/: CMakeLists.txt  Manufactory.cpp  Manufactory.h  ОТИС.cpp
trunk/po0_220226/task_01/: readme.md
trunk/po0_220226/task_02/: readme.md
trunk/po0_220227/task_01/src/: CMakeLists.txt  Header.h  Main.cpp  Source.cpp
trunk/po0_220227/task_02/src/: CMakeLists.txt  DieselEngine.cpp  DieselEngine.h  Engine.cpp  Engine.h  ICEngine.cpp  ICEngine.h  Main.cpp  TurbojetEngine.cpp  TurbojetEngine.h  readme.md
trunk/po0_220227/task_03/src/: CMakeLists.txt  Complex.cpp  Complex.h  Container.cpp  Container.h  Integer.cpp  Integer.h  Main.cpp  Number.cpp  Number.h  Real.cpp  Real.h
trunk/po0_220227/task_05/src/: CMakeLists.txt  List.h  PQueue.h  Pair.cpp  Pair.h  main.cpp
(+168 files in other folders)
